--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@hitc/netsuite-types": "^2019.2.8",
     "flow-bin": "^0.115.0",
     "flow-typed": "^3.1.0"
+  },
+  "resolutions": {
+    "flow-typed/unzipper/fstream/mkdirp": "0.5.5"
   }
 }
